--- a/package.json
+++ b/package.json
@@ -38,6 +38,9 @@
     "@babel/polyfill": "^7.8.7",
     "clean-webpack-plugin": "^3.0.0",
     "react": "^16.13.1",
-    "react-dom": "^16.13.1"
+    "react-dom": "^16.13.1",
+    "react-redux": "^7.2.1",
+    "redux": "^4.0.5",
+    "redux-devtools-extension": "^2.13.8"
   }
 }
